# BiliB

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/src/: main.cpp
libRatio/: CMakeLists.txt
libRatio/doc/: CMakeLists.txt  Doxyfile-html.cmake
libRatio/include/: Ratio.hpp
libRatio/src/: Ratio.cpp
myExemples/: CMakeLists.txt
myExemples/src/: main.cpp  test.cpp
myTest/: CMakeLists.txt
myTest/src/: arithmeticOperators.cpp  assignmentOperators.cpp  constructors.cpp  functions.cpp  mathsFunctions.cpp  operators.cpp  relationalOperators.cpp  test.cpp  variadicsFunctions.cpp
tests/: CMakeLists.txt
tests/src/: arithmeticOperators.cpp  assignmentOperators.cpp  constructors.cpp  functions.cpp  variadicsFunctions.cpp
